--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ html, body{
 	font-size:32px;
 	margin-top:100px;
 	color:hsla(208, 26%, 26%, 1);
+	padding:0px 10px;
 }
 
 #page > p{
@@ -30,6 +31,7 @@ html, body{
 	margin:40px 0px;
 	margin-top:20px;
 	color:hsla(208, 26%, 26%, 1);
+	padding:0px 10px;
 }
 
 #page > p.loading{
@@ -48,11 +50,11 @@ html, body{
 	content:'';
 	position:absolute;
 	top:50%;
-	left:150%;
-	width:40px;
-	height:40px;
-	margin-top:-20px;
-	margin-left:-20px;
+	left:125%;
+	width:30px;
+	height:30px;
+	margin-top:-15px;
+	margin-left:-15px;
 	background:hsla(208, 26%, 26%, 0.5);
 	border-radius:50%;
 }
@@ -61,11 +63,11 @@ html, body{
 	content:'';
 	position:absolute;
 	top:50%;
-	right:150%;
-	width:40px;
-	height:40px;
-	margin-top:-20px;
-	margin-right:-20px;
+	right:125%;
+	width:30px;
+	height:30px;
+	margin-top:-15px;
+	margin-right:-15px;
 	background:hsla(208, 26%, 26%, 0.5);
 	border-radius:50%;
 }
